gcc/testsuite/g++.dg/cpp0x/noexcept11.C
// PR c++/50309
// { dg-options -std=c++0x }

void foo () noexcept () { } // { dg-error "expected" }
